Here we list changes of Ipopt since the release of version 3.0.0.
More detailed information about incremental changes can be found in the
commit history.

2020-xx-yy: 3.13.3
        - Members of AmplTNLP class are now protected instead of private.
        - Updated Eclipse Public License from 1.0 to 2.0.

2020-04-30: 3.13.2
        - The C-preprocessor defines COIN_IPOPT_CHECKLEVEL,
          COIN_IPOPT_VERBOSITY, and FORTRAN_INTEGER_TYPE, which are defined
          by IpoptConfig.h, have been renamed to IPOPT_CHECKLEVEL,
          IPOPT_VERBOSITY, and IPOPT_FORTRAN_INTEGER_TYPE, respectively.
          They are still available under their previous name, but these
          will be removed in Ipopt 3.14.
        - Changed dependencies as used by coinbrew to use new versions (2.1)
          of ThirdParty/HSL and ThirdParty/MUMPS and dropped ThirdParty/Metis.
          The new versions of the HSL and MUMPS build scripts now look
          for a Metis library in the system and should work with both
          Metis 4 and Metis 5.
        - Changed location where Java interface jar gets installed from
          $libdir to $datadir/java/.
        - minor fixes to buildsystem

2020-03-11: 3.13.1
        - Added asserts that check whether sparsity pattern of Jacobian
          and Hessian as returned by TNLP are within range w.r.t. number
          of variables and constraints. [#350]
        - TNLPAdapter::ResortBnds now initializes complete output arrays
          with 0.0 before filling in values for non-fixed variables. Use
          new argument clearorig to turn this off. [#352]
        - bring back configure variables ADD_{C,CXX,F}FLAGS
        - added configure option --enable-relocatable to make prefix in
          pkg-config files relative to pcfiledir (assuming that --libdir
          hasn't been set)
        - bring back configall_system.h for build without config header
        - minor fixes to buildsystem

2019-10-19: 3.13.0